Bug 345099 - Cantor crashing after select a keyword from tab completion using mouse
Summary: Cantor crashing after select a keyword from tab completion using mouse
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Rieder
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-12 21:21 UTC by Filipe Saraiva
Modified: 2016-07-06 20:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Filipe Saraiva 2015-03-12 21:21:44 UTC
Cantor crashing after select a keyword from tab completion using mouse.

Reproducible: Always

Steps to Reproduce:
1. Select any backend, type some key (for example, 'a') and press TAB;
2. Cantor will show the tab completion. Select some option using the mouse;
3. Cantor crash.



This bug was introduced after the port to Qt5/KF5; this bug not exist in Cantor Qt4 version.
Comment 1 Christoph Feck 2015-03-12 21:34:44 UTC
If possible, add the backtrace.
Comment 2 Antonis G. 2015-12-05 09:46:32 UTC
I can reproduce. I have no backtrace, since I'm on Arch.
Comment 3 Alexander Semke 2016-07-06 20:44:33 UTC
Git commit b216b880208b27807ba7de58a8c1ece4ca076849 by Alexander Semke.
Committed on 06/07/2016 at 20:43.
Pushed by asemke into branch 'master'.

Don't crash when selecting a completion item using mouse.
FIXED-IN: 16.08

M  +10   -14   src/commandentry.cpp

http://commits.kde.org/cantor/b216b880208b27807ba7de58a8c1ece4ca076849