Don't crash when selecting a completion item using mouse.

BUG: 345099
FIXED-IN: 16.08